--- a/Cheque/Cheque/Base.lproj/Main.storyboard
+++ b/Cheque/Cheque/Base.lproj/Main.storyboard
@@ -5,7 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Cheque-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Cheque" customModuleProvider="target" sceneMemberID="viewController">
@@ -17,28 +17,77 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Amount" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lWu-7L-jIr">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Amount" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lWu-7L-jIr">
                                 <rect key="frame" x="252" y="238" width="97" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="97" id="cVk-sx-hqp"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Deadline" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZGK-2h-odc">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Deadline" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZGK-2h-odc">
                                 <rect key="frame" x="252" y="309" width="97" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z5X-I5-Upx">
-                                <rect key="frame" x="268" y="375" width="64" height="30"/>
-                                <state key="normal" title="Add Task"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z5X-I5-Upx">
+                                <rect key="frame" x="236" y="375" width="128" height="128"/>
+                                <state key="normal" image="Unchecked"/>
+                                <connections>
+                                    <action selector="checkTask:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hD7-Zp-UVd"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="z5X-I5-Upx" firstAttribute="top" secondItem="ZGK-2h-odc" secondAttribute="bottom" constant="36" id="GOa-HA-5j3"/>
+                            <constraint firstItem="lWu-7L-jIr" firstAttribute="trailing" secondItem="ZGK-2h-odc" secondAttribute="trailing" id="RiV-8Q-t3c"/>
+                            <constraint firstItem="ZGK-2h-odc" firstAttribute="leading" secondItem="lWu-7L-jIr" secondAttribute="leading" id="dl3-Hn-zvD"/>
+                            <constraint firstItem="ZGK-2h-odc" firstAttribute="centerX" secondItem="z5X-I5-Upx" secondAttribute="centerX" id="fi3-Nb-xpU"/>
+                            <constraint firstItem="ZGK-2h-odc" firstAttribute="top" secondItem="lWu-7L-jIr" secondAttribute="bottom" constant="41" id="gDj-F7-vca"/>
+                            <constraint firstItem="lWu-7L-jIr" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="174" id="sE4-ej-VQL"/>
+                            <constraint firstItem="lWu-7L-jIr" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="w9J-Ga-0Ll"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="C7n-jl-FTK"/>
+                    <navigationItem key="navigationItem" title="Cheque" id="eu8-R4-UhB">
+                        <barButtonItem key="rightBarButtonItem" title="Tasks" id="WpJ-iz-P4b">
+                            <connections>
+                                <segue destination="j5D-6u-wwa" kind="show" id="Msv-2s-YyL"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="checkButton" destination="z5X-I5-Upx" id="CuO-z9-YtM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1055" y="339"/>
+        </scene>
+        <!--Tasks-->
+        <scene sceneID="2gS-7l-pdv">
+            <objects>
+                <viewController id="j5D-6u-wwa" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="7Wb-DC-Q76"/>
+                        <viewControllerLayoutGuide type="bottom" id="3Or-Ak-onG"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="rOQ-Ei-84z">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jtr-4a-qG4">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Tasks" id="cTW-80-JGF"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8PV-sM-7Yn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1975" y="339"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="lOB-Ni-POv">
@@ -59,4 +108,7 @@
             <point key="canvasLocation" x="247" y="999"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Unchecked" width="128" height="128"/>
+    </resources>
 </document>
